# midi-controller

./: .gitignore  Cargo.toml  architecture.md
.github/workflows/: rust_ci.yml
